feat(module-6-fuzzy-autocomplete):
Add fuzzy search and autocomplete via CriteriaQuery with integration tests